// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpertBio Container should render with no rep 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
      },
      Object {
        "padding": 16,
      },
    ]
  }
>
  <Image
    height={42}
    source={1}
    style={
      Object {
        "borderColor": "#F2F2F2",
        "borderRadius": 21,
        "borderWidth": 1,
        "marginRight": 16,
      }
    }
    width={42}
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flexGrow": 1,
      }
    }
  >
    <View>
      <Text>
        Pro Account Support
      </Text>
      <View
        style={
          Array [
            Object {
              "alignSelf": "stretch",
              "borderBottomWidth": 1,
              "borderColor": "#F2F2F2",
              "marginTop": 8,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`ExpertBio Container should render with pro rep 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
      },
      Object {
        "padding": 16,
      },
    ]
  }
>
  <Image
    height={42}
    source="https://s3.img-b.com/image/upload/t_base,w_42,h_42/v1/mediabase/build_profiles/123/profile/123"
    style={
      Object {
        "borderColor": "#F2F2F2",
        "borderRadius": 21,
        "borderWidth": 1,
        "marginRight": 16,
      }
    }
    width={42}
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flexGrow": 1,
      }
    }
  >
    <View>
      <Text
        weight="bold"
      >
        Your Project Advisor
      </Text>
      <Text>
        Derf
         
        Nabac
      </Text>
    </View>
  </View>
</View>
`;
